2001-10-04  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (AS_SHELL_SANITIZE): Use a portable
	combination of Awk and sed to replace $LINENO.

2001-10-02  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Limitations of Builtins): You can't use
	"source"; it's not portable.  Remove confusing and
	somewhat-incorrect example involving "." and "/".

	* lib/m4sugar/m4sh.m4 (AS_SHELL_SANITIZE): "source" -> ".", for
	compatibility with POSIX shells.

2001-10-02  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (AS_SHELL_SANITIZE): Just source 40.lineno
	instead of exec'ing to preserve $0 and $@.

2001-10-01  Akim Demaille  <akim@epita.fr>

	* tests/testsuite (AT_INIT) <at_pass_list>: New.
	Don't run twice the same test.

2001-10-01  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT) <--help>: Catch up with reality.
	No longer output the list of tests.
	<--list>: New option.
	<--full-help>: Remove.
	Complete the short/long options duality.
	Various small adjustments.

2001-10-01  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Use @kbd for user input.
	Always use `$' as shell prompt.

2001-09-30  Paul Eggert  <eggert@twinsun.com>

	* lib/autoconf/status.m4 (AC_OUTPUT_MAKE_DEFS):
	Don't use nested parenthesization.  This patch was originally
	suggested to bug-autoconf by Philippe De Muyter on 2000-05-28,
	but somehow it didn't get incorporated then.
	* doc/autoconf.texi (Limitations of Usual Tools):
	Clarify remark about sed and nested parenthesization.

	* lib/autoconf/types.m4 (AC_CHECK_SIZEOF):
	Report an error if the size cannot be determined even though
	the type exists.
	* lib/autoconf/general.m4 (_AC_COMPUTE_INT_COMPILE):
	Check for `expr' arithmetic overflow, and for compilation failure,
	and invoke a new argument $4 if either is discovered.
	This makes _AC_COMPUTE_INT_COMPILE more like _AC_COMPUTE_INT_RUN.
	(_AC_COMPUTE_INT): Pass IF-FAILS arg to _AC_COMPUTE_INT_COMPILE.

2001-09-28  Akim Demaille  <akim@epita.fr>
