@@ -1,1 +1,24 @@
+## Process this file with automake to create Makefile.in -*-Makefile-*-
+
+## Makefile for Autoconf.
+## Copyright 2001 Free Software Foundation, Inc.
+
+## This program is free software; you can redistribute it and/or modify
+## it under the terms of the GNU General Public License as published by
+## the Free Software Foundation; either version 2, or (at your option)
+## any later version.
+
+## This program is distributed in the hope that it will be useful,
+## but WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+## GNU General Public License for more details.
+
+## You should have received a copy of the GNU General Public License
+## along with this program; if not, write to the Free Software
+## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
+## 02111-1307, USA.
+
 EXTRA_DIST = move-if-change prev-version.txt
+
+MAINTAINERCLEANFILES = config.guess config.sub install-sh mdate-sh missing \
+                       mkinstalldirs texinfo.tex
